src/app/shared/mission-slider/mission-slider.component.scss
@import '../../../variables';

.mission-card {
    min-height: 300px;
    margin: 10px;

    .icon-mission-card {
        i {
            color: $white;
            font-size: $p-font;
            background-color: $brand;
            padding: 11px;
            border-radius: 24px;

        }
    }

    .mission-card-title {
        padding-top: 20px;
        font-size: $md-font-p;
        line-height: 26px;
        font-weight: 600;
    }

    .mission-card-image {
        border-radius: 20px;

        img {
            width: 100%;
            height: 250px;
            object-fit: cover;
            object-position: center center;
            border-radius: 10px 10px 10px 10px;
        }

    }

    .mission-card-description {
        max-width: fit-content;
        color: $mid-grey;
        font-weight: 500;
        size: 13px;
        line-height: 20px;
        padding-top: 20px;
    }
}

.mission-card.mobile {
    .mission-card-image {
        margin: 20px;
    }

    .mission-card-description {
        margin: 20px;
    }
}

